fix: fix spacing for date-picker

--- a/packages/less-plugin-dls/tokens/components/date-picker.less
+++ b/packages/less-plugin-dls/tokens/components/date-picker.less
@@ -63,8 +63,8 @@
  * DatePicker body,
  * including weekdays, day/month/year body
  */
-@dls-date-picker-day-body-padding-top: @dls-padding-unit * 2;
-@dls-date-picker-day-body-padding-bottom: @dls-padding-unit * 4;
+@dls-date-picker-day-body-padding-top: @dls-padding-unit * 1;
+@dls-date-picker-day-body-padding-bottom: @dls-padding-unit * 3;
 @dls-date-picker-weekdays-spacing-after: @dls-padding-unit * 3;
 @dls-date-picker-month-body-padding-top: @dls-padding-unit * 6;
 @dls-date-picker-year-body-padding-top: @dls-padding-unit * 6;
